Refactored LogosApplication's `search` method to `search_logos_library`
More specific name, allows easier implementation of other search methods.

--- a/example.ipynb
+++ b/example.ipynb
@@ -148,7 +148,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "657bc152-803d-484f-b402-451f8683e1b2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
