Added function/tool for getting Bible passages using Logos COM API

--- a/example.ipynb
+++ b/example.ipynb
@@ -17,7 +17,7 @@
    "id": "d266414e-13ad-46f0-a782-c1f3e0152199",
    "metadata": {},
    "source": [
-    "It's assumed that you have an OpenAI API key and that this key is assigned to the environment variable `OPENAI_API_KEY`. If these assumptions don't hold, change line 15 in `openai_client.py` accordingly.\n",
+    "It's assumed that you have an OpenAI API key and that this key is assigned to the environment variable `OPENAI_API_KEY`. If these assumptions don't hold, change line 16 in `openai_client.py` accordingly.\n",
     "\n",
     "In the code below, we instantiate the OpenAIClient with a model. If you're unsure of which models are available, you can instantiate the client without passing it a model then run `client.list_models()` to get back a list of available models:\n",
     "```python\n",
@@ -35,12 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openai_client import OpenAIClient\n",
+    "from openai_client import OpenAIClient, load_tools\n",
     "\n",
-    "# If you're unsure of which models are available,\n",
-    "# you can instantiate the client without passing it a model\n",
-    "# then run `client.list_models()` to get back a list of \n",
-    "# available models\n",
     "model = \"gpt-4-1106-preview\"\n",
     "gpt4 = OpenAIClient(model)"
    ]
@@ -68,26 +64,9 @@
     "temp = 0.7\n",
     "max_tokens = 3_096\n",
     "\n",
-    "# Cf. logos_app.py for details on the `search_logos_library` function\n",
-    "tools = [\n",
-    "    {\n",
-    "        \"type\": \"function\",\n",
-    "        \"function\": {\n",
-    "            \"name\": \"search_logos_library\",\n",
-    "            \"description\": \"Searches the LogosApplication library for a given query and returns a JSON string of the search results\",\n",
-    "            \"parameters\": {\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"query\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"description\": \"The search term to query in the LogosApplication library\",\n",
-    "                    },\n",
-    "                },\n",
-    "                \"required\": [\"query\"],\n",
-    "            },\n",
-    "        },\n",
-    "    }\n",
-    "]\n",
+    "# Cf. logos_app.py for details on the `search_logos_library` and `get_bible_passage` functions\n",
+    "# and cf. openai_client for details on the `load_tools` function\n",
+    "tools = load_tools()\n",
     "\n",
     "sys_msg = \"You are a helpful assistant.\"\n",
     "gpt4.set_sys_msg(sys_msg)"
@@ -113,6 +92,14 @@
     "In the code above we set the standard example for a system message: 'You are a helpful assistant.' \n",
     "\n",
     "Add a user message:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c9c6561-d466-43cf-92ed-6fb9e3e2429e",
+   "metadata": {},
+   "source": [
+    "## search_logos_library tool example:"
    ]
   },
   {
@@ -172,6 +159,40 @@
      ]
     }
    ],
+   "source": [
+    "gpt4.request_completion(temp=temp, max_tokens=max_tokens, tools=tools)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bf420fa-9794-47e1-8f80-1839a6be0f72",
+   "metadata": {},
+   "source": [
+    "## get_bible_passage tool example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "007b3be6-4a29-4960-91a2-37a814d0951e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpt4.clear_messages()\n",
+    "\n",
+    "sys_msg = \"You are a helpful assistant.\"\n",
+    "gpt4.set_sys_msg(sys_msg)\n",
+    "\n",
+    "user_msg = \"What is 1 Kings 2:1-12 about?\"\n",
+    "gpt4.add_user_msg(user_msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7fcc3a5-cce7-4e37-861b-ca75a14e335c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "gpt4.request_completion(temp=temp, max_tokens=max_tokens, tools=tools)"
    ]
